--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9dd8a5a6",
    "metadata": {},
    "outputs": [
@@ -1618,8 +1618,9 @@
     "import pandas as pd\n",
     "import plotly.graph_objects as go # Importación de plotly.graph_objects como go\n",
     "\n",
-    "# Leer los datos del archivo CSV\n",
-    "car_data = pd.read_csv(r'C:\\Users\\Juan\\Vehicles_pro\\vehicles_us.csv')\n",
+    "# Leer los datos del archivo CSV}\n",
+    "\n",
+    "car_data = pd.read_csv(r'C:\\Users\\Juan\\Vehicles_pro\\Vehicles\\vehicles_us.csv')\n",
     "\n",
     "# Crear un histograma utilizando plotly.graph_objects\n",
     "# Se crea una figura vacía y luego se añade un rastro de histograma\n",
